--- a/.github/workflows/usuario.yml
+++ b/.github/workflows/usuario.yml
@@ -34,7 +34,7 @@ jobs:
  
       # Runs a single command using the runners shell
       - name: Step 3 Execute collection
-        run:  newman run novo_usuario.json -e chips_environmen.json -g chips_globals.json --reporters cli, -r htmlextra --reporter-htmlextra-browserTitle "Report Test Signup - ERP" --reporter-htmlextra-title "Report Test Signup - ERP" --reporter-htmlextra-export ./docs/index.html
+        run:  newman run novo_usuario.json -e chips_environment.json -g chips_globals.json --reporters cli, -r htmlextra --reporter-htmlextra-browserTitle "Report Test Signup - ERP" --reporter-htmlextra-title "Report Test Signup - ERP" --reporter-htmlextra-export ./docs/index.html
  
  
       # Runs a set of commands using the runners shell
@@ -44,4 +44,3 @@ jobs:
         with:
           name: report
           path: ./docs/index.html
-          
