--- a/.github/workflows/usuario.yml
+++ b/.github/workflows/usuario.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  Test-01: 
+  Teste-01: 
   name: usuario com sucesso
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -44,6 +44,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report
-          path: ./docs/index.html
-
- 
+          path: ./docs/index.html 
+          
