--- a/.github/workflows/usuario.yml
+++ b/.github/workflows/usuario.yml
@@ -1,4 +1,4 @@
-name: ERP Chips Postman Automation API Test
+name: API Test usuario
  
 # Controls when the workflow will run
 on:
@@ -13,6 +13,7 @@ on:
  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
   Teste-01: 
   name: usuario com sucesso
     # The type of runner that the job will run on
@@ -34,7 +35,7 @@ jobs:
  
       # Runs a single command using the runners shell
       - name: Step 3 Execute collection
-        run:  newman run novo_usuario.json -e chips_environment.json -g chips_globals.json --reporters cli, -r htmlextra --reporter-htmlextra-browserTitle "Report Test Signup - ERP" --reporter-htmlextra-title "Report Test Signup - ERP" --reporter-htmlextra-export ./docs/index.html
+        run:  newman run novo_usuario.json -e chips_environment.json -g chips_globals.json --reporters cli , -r htmlextra --reporter-htmlextra-export ./result/Report.html
  
  
       # Runs a set of commands using the runners shell
@@ -43,5 +44,35 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: report
-          path: ./docs/index.html 
+          path: ./result/
           
+    deploy:
+    name: Deploy GitHub Pages 🌐
+    runs-on: ubuntu-latest
+    if: always()
+    needs: 
+      - test
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: https://danidads.github.io/chips-academy-api-postman/Report.html
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+ 
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with: 
+          name: report
+ 
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./
+ 
+      - name: Deploy to Github Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
