--- a/.github/workflows/usuario.yml
+++ b/.github/workflows/usuario.yml
@@ -41,7 +41,7 @@ jobs:
       # Runs a set of command using the runners shell
       - name: Etapa 03 - Rodando as Collections de Testes
         run: |
-          newman run novo_usuario.json -e chips_environment.json -g chips_globals.json --delay-request 1 --reporters cli , -r htmlextra --reporter-htmlextra-export ./result/Report.html
+          newman run novo_usuario -e chips_environment -g chips_globals --delay-request 1 --reporters cli , -r htmlextra --reporter-htmlextra-export ./result/Report.html
  
       - name: Etapa 04 - Salvando o Resultado dos Testes
         uses: actions/upload-artifact@v4
