--- a/.github/workflows/usuario.yml
+++ b/.github/workflows/usuario.yml
@@ -16,7 +16,7 @@ jobs:
  
   # This workflow contains a single job called "build"
   test:
-    name: usuario com sucesso
+    name: usuario sucesso
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
  
@@ -80,3 +80,4 @@ jobs:
       - name: Deploy to Github Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      
